<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_sun" >

    <RelativeLayout
        android:id="@+id/picklist_headertoolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_middle_background_on"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/picklist_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_blue"
            android:onClick="onClick"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textStyle="normal" >
        </Button>

        <TextView
            android:id="@+id/picklist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/categorytype"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>

    <TextView
        android:id="@+id/lbl_picklist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picklist_headertoolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/choose"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold" >
    </TextView>

    <RelativeLayout
        android:id="@+id/rl_picklist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_picklist"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialog_background" >

        <ListView
            android:id="@+id/lst_picklist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_picklist"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#1F6E6E6E"
            android:dividerHeight="1dp"
            android:scrollbars="none" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>